--- a/res/layout/widget_layout.xml
+++ b/res/layout/widget_layout.xml
@@ -47,16 +47,34 @@
      android:layout_weight="1"
      android:layout_marginLeft="4dip"
      android:layout_marginRight="4dip">
-    <ImageView
-        android:id="@+id/widgetpic"
-        android:src="@drawable/litecoin"
+     <LinearLayout
+       android:orientation="vertical"
+       android:layout_width="0dip"
+       android:layout_weight="1"
+       android:layout_marginLeft="2dip"
+       android:layout_height="match_parent">
+      <ImageView
+          android:id="@+id/widgetpic"
+          android:src="@drawable/litecoin"
+          android:layout_height="0dip"
+          android:layout_width="match_parent"
+          android:layout_weight="1"
+          android:layout_marginLeft="0dip"
+          android:layout_marginRight="2dip"
+          android:layout_marginBottom="0dip"
+          />
+      <TextView
+        android:id="@+id/coin"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_width="0dip"
-        android:layout_marginLeft="5dip"
-        android:layout_marginRight="4dip"
-        android:layout_marginBottom="5dip"
+        android:visibility="gone"
+        android:layout_marginTop="-1dip"
+        android:layout_marginLeft="10dip"
+        android:layout_marginRight="0dip"
+        android:layout_marginBottom="1dip"
+        android:textSize="11dp"
         />
+    </LinearLayout>
     <TextView
         android:id="@+id/exchange_name"
         android:layout_width="wrap_content"
